# create-satysfi-fonts-package

./: .gitignore  README.md  gen_doc_opam.rb  gen_doc_saty.rb  gen_hash.rb  gen_opam.rb  gen_readme.rb  gen_satyristes.rb  gen_stage2_yml.rb  stage1.rb  stage2.rb
test/: computer-modern-stage1.yml  computer-modern-unicode-stage1.yml  expected-cm.opam  expected-computer-modern-unicode.opam  expected-noto-sans-cjk-jp.opam  expected-noto-sans-jp.opam  expected-stage2-fonts-computer-modern.yml  expected-stage2-fonts-noto-sans-cjk-jp.yml  noto-sans-cjk-jp-stage1.yml  noto-sans-jp-stage1.yml  stage1-noto-sans-cjk-jp.yml  stage1-test.rb  test-stage1-gen-opam.rb  test-stage1-gen-stage2-yml.rb  test-stage1.rb  test.rb  test_stage1.rb
test/expected/: expected-Satyristes-computer-modern.txt  expected-Satyristes-noto-sans-cjk-jp.txt  expected-asana-math-README.md  expected-asana-math-doc.saty  expected-asana-math-mathfonts.satysfi-hash  expected-computer-modern-unicode-README.md  expected-computer-modern-unicode-doc.opam  expected-computer-modern-unicode-doc.saty  expected-computer-modern-unicode-fonts.satysfi-hash  expected-noto-sans-cjk-jp-README.md  expected-noto-sans-cjk-jp-doc.opam  expected-noto-sans-cjk-jp-doc.saty  expected-noto-sans-cjk-jp-fonts.satysfi-hash
test/input/: stage2-fonts-asana-math.yml  stage2-fonts-computer-modern.yml  stage2-fonts-noto-sans-cjk-jp.yml
