opam-version: "2.0"
name: "satysfi-fonts-computer-modern-unicode"
version: "0.7.0+satysfi0.0.4"
synopsis: "SATySFi Font Package for Computer Modern Unicode fonts"
description: """
SATySFi font package for Computer Modern Unicode fonts.

This package installs fonts from https://cm-unicode.sourceforge.io.
"""
maintainer: "Yuito Murase <yuito.murase@gmail.com>"
authors: "Yuito Murase <yuito.murase@gmail.com>"
license: "OFL"
homepage: "https://github.com/zeptometer/SATySFi-fonts-computer-modern"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-computer-modern/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-computer-modern.git"
extra-source "computer-modern-unicode.tar.xz" {
  archive: "https://sourceforge.net/projects/cm-unicode/files/latest/download"
  checksum: [
    "sha256=c240fff666a7d66de83a9f09ef045732c07291f2c83a07ae25ed888dc92f00f0"
    "sha512=fddad701425d1d1e761f1998b9a168fb60dff5972a858e44ae107e9bfa1678f807e71055b93b0969d29a0d728233a5532edc02c0655bded3ac5bc69b580da0c4"
  ]
}
depends: [
  "satysfi" {>= "0.0.3+dev2019.02.12" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [
  ["tar" "xf" "computer-modern-unicode.tar.xz"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-computer-modern"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
