opam-version: "2.0"
name: "satysfi-fonts-computer-modern-doc"
version: "0.7.0+satysfi0.0.4"
synopsis: "Document of SATySFi Font Package for Donald Knuth's Computer Modern Fonts"
description: """
Document package for satysfi-fonts-computer-modern
"""
maintainer: "MURASE Yuito <yuito.murase@gmail.com>"
authors: "MURASE Yuito <yuito.murase@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/zeptometer/SATySFi-fonts-computer-modern"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-computer-modern/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-computer-modern.git"
depends: [
  "satysfi" {>= "0.0.3+dev2019.02.12" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-base" {>= "1.2.0"}
  "satysfi-fonts-computer-modern" {= "0.7.0+satysfi0.0.4"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "fonts-computer-modern-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-computer-modern-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
