opam-version: "2.0"
name: "satysfi-fonts-noto-sans-cjk-jp-doc"
version: "2017-06-01+satysfi0.0.4"
synopsis: "Document of SATySFi Font Package for Noto Sans CJK JP fonts"
description: """
Document package for satysfi-fonts-noto-sans-cjk-jp
"""
maintainer: "Yuito Murase <yuito.murase@gmail.com>"
authors: "Yuito Murase <yuito.murase@gmail.com>"
license: "CC0-1.0"
homepage: "https://github.com/zeptometer/SATySFi-fonts-noto-sans-cjk-jp"
bug-reports: "https://github.com/zeptometer/SATySFi-fonts-noto-sans-cjk-jp/issues"
dev-repo: "git+https://github.com/zeptometer/SATySFi-fonts-noto-sans-cjk-jp.git"
depends: [
  "satysfi" {>= "0.0.3+dev2019.02.12" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-base" {>= "1.2.0"}
  "satysfi-fonts-noto-sans-cjk-jp" {= "2017-06-01+satysfi0.0.4"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "fonts-noto-sans-cjk-jp-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "fonts-noto-sans-cjk-jp-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
